# coopersystem

./: .flake8  .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml  run.sh
coopersystem/: settings.py  urls.py
dockerfiles/: Dockerfile
src/: manage.py
src/coopersystem/: asgi.py  filters.py  settings.py  urls.py  wsgi.py
src/produtos/: const.py  filters.py  models.py  serializers.py  tests.py  views.py
src/produtos/migrations/: 0001_initial.py
src/utils/: serializers.py
